Bugfixes, Corrections, Cleanup and translations with datagen